--- a/.github/workflows/build-swift-package.yml
+++ b/.github/workflows/build-swift-package.yml
@@ -35,30 +35,7 @@ jobs:
       - name: Create ice-swift repository
         run: |
           cd packaging/swift
-          ./build-swift-repo.sh "${{ inputs.ice_version }}" "${{ inputs.repository_url }}"
+          ./update-ice-swift-nightly.sh "${{ inputs.ice_version }}" "${{ inputs.repository_url }}"
 
           echo "Testing ice-swift build..."
-          swift build --package-path ice-swift --configuration release
-
-          # Create bare repository for ice-swift
-          git clone --bare ice-swift ice-swift.git
-          cd ice-swift.git
-
-          git update-server-info
-
-      - name: Upload Repository
-        run: |
-          # Upload tap
-          cd packaging/swift/ice-swift.git
-          find . -type f | while IFS= read -r file; do
-            curl -u "${{ inputs.repository_username }}:${{ secrets.REPOSITORY_PASSWORD }}" \
-                --ftp-create-dirs \
-                --upload-file "$file" \
-                --output /dev/null \
-                --silent \
-                --retry 3 \
-                --fail \
-                --show-error \
-                ${{ inputs.repository_url }}/ice-swift.git/$file || { echo "Upload failed"; exit 1; }
-          done
-        if: inputs.repository_url != ''
+          swift build --package-path ice-swift-nightly --configuration release
