--- a/python/modules/IcePy/msbuild/icepy.vcxproj.filters
+++ b/python/modules/IcePy/msbuild/icepy.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\PySliceLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\cpp\src\Slice\DeprecationReporter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\cpp\src\Slice\FileTracker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
