Add workflow for building docker images (#4124)

--- a/packaging/rpm/docker/amzn2023/Dockerfile
+++ b/packaging/rpm/docker/amzn2023/Dockerfile
@@ -1,8 +1,12 @@
 # Use the official Amazon Linux 2023 image
 FROM public.ecr.aws/amazonlinux/amazonlinux:2023
 
+# Copy Ice spec file into the container
+COPY packaging/rpm/ice.spec /usr/src/ice.spec
+
 # Install required build tools and dependencies
-RUN dnf install --setopt=multilib_policy=all -y \
+RUN dnf config-manager --set-enabled codeready-builder-for-rhel-9-$(arch)-rpms && \
+    dnf install -y \
     rpmdevtools \
     make \
     curl-minimal \
@@ -13,16 +17,5 @@ RUN dnf install --setopt=multilib_policy=all -y \
     redhat-rpm-config \
     glibc-static \
     libstdc++-static && \
-    dnf clean all
-
-# Copy Ice spec file into the container
-COPY packaging/rpm/ice.spec /usr/src/ice.spec
-
-# Install build dependencies. Do not use dnf builddep as it doesn't obey multilib_policy=all.
-RUN rpmspec --parse /usr/src/ice.spec 2>/dev/null | \
-    grep '^BuildRequires:' | \
-    sed -E 's/BuildRequires:\s*//' | \
-    tr ',' '\n' | awk '{print $1}' | sort -u > /tmp/dependencies.txt && \
-    dnf install --setopt=multilib_policy=all -y $(cat /tmp/dependencies.txt) && \
-    rm -f /tmp/dependencies.txt /usr/src/ice.spec && \
+    dnf builddep /usr/src/ice.spec && \
     dnf clean all
