Fix RH credentials path

--- a/.github/workflows/build-container-images.yml
+++ b/.github/workflows/build-container-images.yml
@@ -73,7 +73,7 @@ jobs:
 
           # Add secret with Red Hat credentials if needed
           if [[ "$USE_RH_CREDENTIALS" == "true" ]]; then
-            args+=( --secret id=rh_credentials,src=rh_credentials )
+            args+=( --secret id=rh_credentials,src=../rh_credentials )
           fi
 
           docker buildx build "${args[@]}" .
