--- a/packaging/dpkg/docker/deb-repo-builder/Dockerfile
+++ b/packaging/dpkg/docker/deb-repo-builder/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:bookworm
 
 RUN apt-get update \
-    && apt-get install -y reprepro \
+    && apt-get install -y reprepro gnupg2 \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
