--- a/.github/workflows/release/build-dotnet-packages.yml
+++ b/.github/workflows/release/build-dotnet-packages.yml
@@ -6,28 +6,11 @@ on:
       ice_version:
         required: false
         type: string
-      source_url:
-        required: false
-        type: string
-    secrets:
-      NUGET_API_KEY:
-        required: false
-      AZURE_TENANT_ID:
-        required: true
-      AZURE_CLIENT_ID:
-        required: true
-      AZURE_CLIENT_SECRET:
-        required: true
   workflow_dispatch:
     inputs:
       ice_version:
         description: "The Ice version to build"
         required: false
-      source_url:
-        description: "The URL of the NuGet repository to publish to"
-        required: false
-        type: string
-
 jobs:
   build-slice-compilers:
     strategy:
@@ -102,11 +85,17 @@ jobs:
       - name: Restore C++ dependencies
         run: nuget restore cpp/msbuild/ice.sln
 
+      - name: Ice Package Version
+        if: ${{ inputs.ice_version != '' }}
+        run: |
+          "IcePackageVersion=${{ inputs.ice_version }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        shell: pwsh
+
       # Build .NET assemblies. We shutdown the MSBuild server to avoid issues with the signing step. For example ZeroC.Ice.Slice.Tools.dll
-      # main remain in used by the MSBuild server and cannot be signed.
+      # might remain in used by the MSBuild server and cannot be signed.
       - name: Pack .NET Packages
         run: |
-          dotnet msbuild csharp\msbuild\ice.proj /t:BuildDist /p:Configuration=Release /p:IcePackageVersion="${{ inputs.ice_version }}"
+          dotnet msbuild csharp\msbuild\ice.proj /t:BuildDist /p:Configuration=Release
           dotnet build-server shutdown
 
       - name: Collect Files to Sign
@@ -132,7 +121,7 @@ jobs:
           timestamp-digest: SHA256
 
       - name: Pack .NET Packages
-        run: dotnet msbuild csharp\msbuild\ice.proj /t:Pack /p:Configuration=Release /p:IcePackageVersion="${{ inputs.ice_version }}"
+        run: dotnet msbuild csharp\msbuild\ice.proj /t:Pack /p:Configuration=Release
         env:
           SLICE2CS_STAGING_PATH: "${{ github.workspace }}\\tools"
 
@@ -145,17 +134,3 @@ jobs:
             csharp/src/**/bin/Release/*.snupkg
             tools/ZeroC.Ice.Slice.Tools.CSharp/bin/Release/*.nupkg
             tools/ZeroC.Ice.Slice.Tools.CSharp/bin/Release/*.snupkg
-
-      - name: Publish NuGet Packages
-        run: |
-          $packages = @(
-              Get-ChildItem -Path csharp -Filter "*.nupkg" -File -Recurse
-              Get-ChildItem -Path csharp -Filter "*.snupkg" -File -Recurse
-          )
-
-          foreach ($package in $packages) {
-              Write-Host "Publishing package: $($package.FullName)"
-              dotnet nuget push $package.FullName --source ${{ inputs.source_url }} --api-key ${{ secrets.NUGET_API_KEY }}
-              if ($LASTEXITCODE -ne 0) { throw "dotnet nuget push failed" }
-          }
-        if: inputs.source_url != ''
