--- a/.github/workflows/release/build-maven-packages.yml
+++ b/.github/workflows/release/build-maven-packages.yml
@@ -6,35 +6,11 @@ on:
       ice_version:
         required: false
         type: string
-      repository_url:
-        required: false
-        type: string
-      repository_username:
-        required: false
-        type: string
-    secrets:
-      MAVEN_PASSWORD:
-        required: false
-      AZURE_TENANT_ID:
-        required: true
-      AZURE_CLIENT_ID:
-        required: true
-      AZURE_CLIENT_SECRET:
-        required: true
   workflow_dispatch:
     inputs:
       ice_version:
         description: "The Ice version to build"
         required: false
-      repository_url:
-        description: "The URL of the Maven repository to publish to"
-        required: false
-        type: string
-      repository_username:
-        description: "The username to authenticate with the repository"
-        required: false
-        type: string
-
 jobs:
   build-slice-compilers:
     strategy:
@@ -136,13 +112,24 @@ jobs:
         run: ./gradlew dist
         working-directory: ice/java
 
-      - name: Publish Maven Packages
+      - name: Sign JAR Files
         run: |
-          ./gradlew -p tools/slice-tools publish
-          ./gradlew publish
+          set -euo pipefail
+          echo "$GPG_KEY" | gpg --batch --import
+          find lib tools/slice-tools/build/libs -type f \( -name '*.jar' -o -name '*.pom' \) \
+            -exec gpg -u "$GPG_KEY_ID" --armor --detach-sign --batch --yes --output '{}.asc' '{}' \;
         working-directory: ice/java
         env:
-          MAVEN_REPOSITORY: ${{ inputs.repository_url }}
-          MAVEN_USERNAME: ${{ inputs.repository_username }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-        if: inputs.repository_url != ''
+          GPG_KEY: ${{ secrets.GPG_KEY }}
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: java-packages
+          path: |
+            java/lib/*.jar
+            java/lib/*.pom
+            java/lib/*.asc
+            java/tools/slice-tools/build/libs/*.jar
+            java/tools/slice-tools/build/libs/*.asc
