--- a/.github/workflows/release/build-release-workflow.yml
+++ b/.github/workflows/release/build-release-workflow.yml
@@ -1,4 +1,4 @@
-name: Build Nightly Release
+name: Build Release
 
 on:
   workflow_call:
@@ -7,13 +7,8 @@ on:
         required: false
         default: "1"
         type: string
-      repository_url:
-        required: false
-        default: "https://download.zeroc.com/nexus/repository"
-        type: string
-      repository_username:
-        required: false
-        default: "nightly"
+      channel:
+        required: true
         type: string
   workflow_dispatch:
     inputs:
@@ -21,13 +16,9 @@ on:
         description: "Build number for nightly releases"
         required: false
         default: "1"
-      repository_url:
-        description: "URL of the repository to publish to"
-        required: false
-        default: "https://download.zeroc.com/nexus/repository"
-      repository_username:
-        description: "The username to authenticate with the repository"
-        required: false
+      channel:
+        description: "Release channel (e.g., 3.8, nightly)"
+        required: true
         default: "nightly"
 
 jobs:
@@ -81,153 +72,126 @@ jobs:
         uses: ./.github/actions/upload-nightly
         with:
           upload_file: latest.json
-          repository_url: ${{ inputs.repository_url }}
+          repository_url: https://download.zeroc.com/nexus/repository/nightly/
         env:
-          REPOSITORY_USERNAME: ${{ inputs.repository_username }}
+          REPOSITORY_USERNAME: nightly
           REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
   build-brew-packages:
     name: Build Brew Packages
-    uses: ./.github/workflows/build-brew-packages.yml
+    uses: ./.github/workflows/release/build-brew-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      repository_url: ${{ inputs.repository_url }}
-      repository_username: ${{ inputs.repository_username }}
+      repository_url: https://download.zeroc.com/nexus/repository/nightly/
+      repository_username: nightly
     secrets:
       REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
       ICE_NIGHTLY_PUBLISH_TOKEN: ${{ secrets.ICE_NIGHTLY_PUBLISH_TOKEN }}
 
   build-cpp-windows-packages:
     name: Build C++ NuGet Package
-    uses: ./.github/workflows/build-cpp-windows-packages.yml
+    uses: ./.github/workflows/release/build-cpp-windows-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      nuget_source_url: "${{ inputs.repository_url }}/nuget-nightly/"
-      repository_url: "${{ inputs.repository_url }}/nightly/"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
-      NUGET_API_KEY: ${{ secrets.NEXUS_NIGHTLY_NUGET_API_KEY }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+    secrets: inherit
 
   build-deb-packages:
     name: Build DEB Packages
-    uses: ./.github/workflows/build-deb-packages.yml
+    uses: ./.github/workflows/release/build-deb-packages.yml
     needs: set-version
+    secrets: inherit
     with:
       ice_version: ${{ needs.set-version.outputs.deb_version }}
-      deb_build_options: "nocheck parallel=4"
-      repository_url: ${{ inputs.repository_url }}
-      repository_suffix: "-nightly"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
   build-dotnet-packages:
     name: Build .NET Packages
-    uses: ./.github/workflows/build-dotnet-packages.yml
+    uses: ./.github/workflows/release/build-dotnet-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      source_url: "${{ inputs.repository_url }}/nuget-nightly/"
-    secrets:
-      NUGET_API_KEY: ${{ secrets.NEXUS_NIGHTLY_NUGET_API_KEY }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+    secrets: inherit
 
   build-gem-packages:
     name: Build GEM Packages
-    uses: ./.github/workflows/build-gem-packages.yml
+    uses: ./.github/workflows/release/build-gem-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.gem_version }}
-      repository_url: "${{ inputs.repository_url }}/rubygems-nightly/gems/"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
 
   build-matlab-packages:
     name: Build MATLAB Packages
-    uses: ./.github/workflows/build-matlab-packages.yml
+    uses: ./.github/workflows/release/build-matlab-packages.yml
+    needs: set-version
     with:
-      repository_url: "${{ inputs.repository_url }}/nightly/"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ice_version: ${{ needs.set-version.outputs.semver_version }}
+    secrets: inherit
 
   build-maven-packages:
     name: Build Maven Packages
-    uses: ./.github/workflows/build-maven-packages.yml
+    uses: ./.github/workflows/release/build-maven-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.maven_version }}
-      repository_url: "${{ inputs.repository_url }}/maven-nightly/"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      MAVEN_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+    secrets: inherit
 
   build-npm-packages:
     name: Build NPM Packages
-    uses: ./.github/workflows/build-npm-packages.yml
+    uses: ./.github/workflows/release/build-npm-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      registry_url: "${{ inputs.repository_url }}/npm-nightly/"
-    secrets:
-      NPM_AUTH_TOKEN: ${{ secrets.NEXUS_NIGHTLY_NPM_AUTH_TOKEN }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+    secrets: inherit
 
   build-pip-packages:
     name: Build PIP Packages
-    uses: ./.github/workflows/build-pip-packages.yml
+    uses: ./.github/workflows/release/build-pip-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.pypi_version }}
-      repository_url: "${{ inputs.repository_url }}/pypi-nightly/"
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      PYPI_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
-
+    secrets: inherit
   build-rpm-packages:
     name: Build RPM Packages
-    uses: ./.github/workflows/build-rpm-packages.yml
+    uses: ./.github/workflows/release/build-rpm-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.rpm_version }}
-    secrets:
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    secrets: inherit
 
   build-xcframework-packages:
     name: Build XCFramework Packages
-    uses: ./.github/workflows/build-xcframework-packages.yml
+    uses: ./.github/workflows/release/build-xcframework-packages.yml
     needs: set-version
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      repository_url: ${{ inputs.repository_url }}
-      repository_username: ${{ inputs.repository_username }}
-    secrets:
-      REPOSITORY_PASSWORD: ${{ secrets.NEXUS_NIGHTLY_PASSWORD }}
+    secrets: inherit
 
   build-swift-package:
     name: Build Swift Package
-    uses: ./.github/workflows/build-swift-package.yml
+    uses: ./.github/workflows/release/build-swift-package.yml
     needs: [set-version, build-xcframework-packages]
     with:
       ice_version: ${{ needs.set-version.outputs.semver_version }}
-      repository_url: "${{ inputs.repository_url }}/nightly/"
+      repository_url: "https://download.zeroc.com/nexus/repository/nightly/"
     secrets:
       ICE_NIGHTLY_PUBLISH_TOKEN: ${{ secrets.ICE_NIGHTLY_PUBLISH_TOKEN }}
+
+  publish-release:
+    needs:
+      - build-brew-packages
+      - build-cpp-windows-packages
+      - build-deb-packages
+      - build-dotnet-packages
+      - build-gem-packages
+      - build-matlab-packages
+      - build-maven-packages
+      - build-npm-packages
+      - build-pip-packages
+      - build-rpm-packages
+      - build-xcframework-packages
+      - build-swift-package
+    uses: ./.github/workflows/release/publish-release.yml
+    with:
+      channel: ${ inputs.channel }
+      run_id: ${{ github.run_id }}
