--- a/packaging/rpm/docker/rpm-repo-builder/Dockerfile
+++ b/packaging/rpm/docker/rpm-repo-builder/Dockerfile
@@ -9,3 +9,6 @@ RUN dnf install -y \
 
 COPY packaging/rpm/rpm-sign.sh /usr/local/bin/rpm-sign
 RUN chmod +x /usr/local/bin/rpm-sign
+
+COPY packaging/rpm/rpm-sign.sh /usr/local/bin/create-rpm-repo
+RUN chmod +x /usr/local/bin/create-rpm-repo
