--- a/.github/workflows/release/publish-maven-packages.yml
+++ b/.github/workflows/release/publish-maven-packages.yml
@@ -6,9 +6,15 @@ on:
       channel:
         description: "The channel to publish to (e.g., 3.8, nightly)"
         required: true
+      run_id:
+        description: "The run ID to use for downloading artifacts"
+        required: true
   workflow_call:
     inputs:
       channel:
+        required: true
+        type: string
+      run_id:
         required: true
         type: string
 
@@ -20,10 +26,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Download GEM artifacts
+      - name: Download Java artifacts
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RUN_ID: ${{ github.run_id }}
+          RUN_ID: ${{ inputs.run_id }}
         run: |
           set -euo pipefail
           mkdir -p staging
