--- a/.github/workflows/release/publish-xcframework-packages.yml
+++ b/.github/workflows/release/publish-xcframework-packages.yml
@@ -6,9 +6,15 @@ on:
       channel:
         description: "The channel to publish to (e.g., 3.8, nightly)"
         required: true
+      run_id:
+        description: "The run ID to use for downloading artifacts"
+        required: true
   workflow_call:
     inputs:
       channel:
+        required: true
+        type: string
+      run_id:
         required: true
         type: string
 
@@ -20,7 +26,7 @@ jobs:
       - name: Download XCFramework artifacts
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RUN_ID: ${{ github.run_id }}
+          RUN_ID: ${{ inputs.run_id }}
         run: |
           set -euo pipefail
           mkdir -p staging
