--- a/.github/workflows/release/publish-release.yml
+++ b/.github/workflows/release/publish-release.yml
@@ -1,4 +1,4 @@
-name: "Publis Ice Release"
+name: "Publish Ice Release"
 
 on:
   workflow_dispatch:
@@ -19,79 +19,87 @@ on:
         required: true
         type: string
 jobs:
-  publish-release:
-    runs-on: 'ubuntu-24.04'
+  publish-brew-packages:
+    uses: ./.github/workflows/release/publish-brew-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+  publish-deb-packages:
+    uses: ./.github/workflows/release/publish-deb-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish DEB Packages
-        uses: ./.github/workflows/release/publish-deb-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-gem-packages:
+    uses: ./.github/workflows/release/publish-gem-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish GEM Packages
-        uses: ./.github/workflows/release/publish-gem-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-matlab-packages:
+    uses: ./.github/workflows/release/publish-matlab-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish MATLAB Packages
-        uses: ./.github/workflows/release/publish-matlab-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-maven-packages:
+    uses: ./.github/workflows/release/publish-maven-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish MATLAB Packages
-        uses: ./.github/workflows/release/publish-matlab-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-msi-packages:
+    uses: ./.github/workflows/release/publish-msi-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish Maven Packages
-        uses: ./.github/workflows/release/publish-maven-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-npm-packages:
+    uses: ./.github/workflows/release/publish-npm-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish MSI Packages
-        uses: ./.github/workflows/release/publish-msi-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-nuget-packages:
+    uses: ./.github/workflows/release/publish-nuget-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish NPM Packages
-        uses: ./.github/workflows/release/publish-npm-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-pip-packages:
+    uses: ./.github/workflows/release/publish-pip-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish NuGet Packages
-        uses: ./.github/workflows/release/publish-nuget-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-rpm-packages:
+    uses: ./.github/workflows/release/publish-rpm-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
 
-      - name: Publish RPM Packages
-        uses: ./.github/workflows/release/publish-rpm-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-swift-packages:
+    uses: ./.github/workflows/release/publish-swift-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
+    if: ${{ inputs.channel == 'nightly' }}
 
-      - name: Publish XCFramework Packages
-        uses: ./.github/workflows/release/publish-xcframework-packages.yml
-        with:
-          channel: ${{ inputs.channel }}
-          run_id: ${{ inputs.run_id }}
-        secrets: inherit
+  publish-xcframework-packages:
+    uses: ./.github/workflows/release/publish-xcframework-packages.yml
+    with:
+      channel: ${{ inputs.channel }}
+      run_id: ${{ inputs.run_id }}
+    secrets: inherit
